# Eliyonix

./: IMPLEMENTATION_SUMMARY.md  README.md
VidyutSevaIonic/: .env  capacitor.config.ts  ionic.config.json  package-lock.json  package.json
VidyutSevaIonic/src/pages/: Home.tsx  SolarBrandSelector.css  SolarBrandSelector.tsx
VidyutSevaIonic/src/services/: api.ts
backend/echoRed/: .bedrock_agentcore.yaml  AI_RECOMMENDATION_GUIDE.md  DEPLOYMENT_GUIDE.md  QUICKSTART.md  QUICKSTART_RECOMMENDATIONS.md  README.md  RECOMMENDATION_FLOW.md  SETUP_CHECKLIST.md  VIDYUTSEVA_ARCHITECTURE.md  fix_qdrant_indexes.py  generate_synthetic_data.py  pyproject.toml  test_embeddings.py  test_qdrant.py  test_smtp_agent_pipeline.py  verify_pipeline.py
backend/echoRed/cdk/: package-lock.json
backend/echoRed/mcp/lambda/: handler.py
backend/echoRed/src/: a2a_protocol.py  api_routes.py  bedrock_integration.py  grid_state.py  live_state.py  main.py  memory_store.py  mqtt_subscriber.py  orchestrator.py  qdrant_store.py  realtime_system.py  recommendation_engine.py  recommendation_scheduler.py  smtp_mcp_tool.py  telegram_mcp_tool.py  telegram_notifier.py  vector_store.py  voice_agent.py
backend/echoRed/src/agents/: __init__.py  alert_dispatcher.py  fault_detector.py  load_forecaster.py  recommendation_agent.py
backend/echoRed/test/: test_vidyutseva.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/services/: api.js
mobilefrontend/VidyutSevaApp/: App.js  app.json  package-lock.json  package.json
(+15 files in other folders)
