
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echoRed"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "bedrock-agentcore >= 1.0.3",
    "boto3 >= 1.38.0",
    "botocore >= 1.38.0",
    "langchain >= 1.0.3",
    "langchain-mcp-adapters >= 0.1.11",
    "langchain_aws >= 1.0.0",
    "langgraph >= 1.0.2",
    "mcp >= 1.19.0",
    "pytest >= 7.0.0",
    "pytest-asyncio >= 0.21.0",
    "requests >= 2.32.5",
    "scikit-learn >= 1.0.0",
    "numpy >= 1.21.0",
    "psycopg2-binary >= 2.9.0",
    "fastapi >= 0.100.0",
    "uvicorn >= 0.20.0",
    "python-dotenv >= 1.0.0",
    "qdrant-client >= 1.7.0"
]